# ficino

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  .pre-commit-config.yaml  FEATURES.md  FICINO.md  FICINO_CLAUDE_CODE_PROMPT.md  FICINO_CODE_REVIEW.md  FICINO_REMEDIATION_PLAN.md  FICINO_REVIEW.md  FICINO_REVIEW_R10_5.md  README.md  docker-compose.yml  ficino-prototype.jsx  package-lock.json  package.json  playwright.config.ts  ruff.toml
.review-findings/: COMMIT_PLAN.md  accessibility.md  bugs.md  code-quality.md  dependencies.md  llm-safety.md  performance.md  phase0-status.md  phase1-idor-status.md  phase1-status.md  phase2-a11y-status.md  phase2-status.md  phase2-tests-status.md  phase3-a11y-status.md  phase3-status.md  phase3-tests-status.md  phase4-audit-log-status.md  phase4-csrf-status.md  phase4-persona-temperature-status.md  phase4-reply-batching-status.md  phase4-signed-figures-status.md  phase4-status.md  phase4-test-coverage-status.md  phase4-typed-exceptions-status.md  playwright.md  security.md
api/: Dockerfile  audit.py  celery_client.py  config.py  constants.py  csrf.py  main.py  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  sanitize.py  signed_url.py  textutil.py
shared/: pyproject.toml
shared/ficino_shared/: __init__.py  constants.py  sanitize.py  settings_schema.py  signed_url.py
shared/ficino_shared/storage/: __init__.py  base.py  local.py  supabase.py
shared/tests/: test_constants.py  test_sanitize.py  test_settings_schema.py  test_signed_url.py  test_storage_local.py  test_storage_supabase.py
(+279 files in other folders)
