[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ficino-shared"
version = "1.0.0"
description = "Code shared between the Ficino api and worker containers"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["ficino_shared", "ficino_shared.storage"]
